[package]
name = "ex_pbkdf2"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "ex_pbkdf2"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }

[features]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]